replaced node-sass with sass and now things areworking finally...

--- a/client/src/styles/common/_fonts.scss
+++ b/client/src/styles/common/_fonts.scss
@@ -1,5 +1,5 @@
-$main-font: 'Optima', 'Trebuchet MS', 'Helvetica', 'Arial', 'Segoe UI', 'Roboto', 'Oxygen',
+$main: 'Optima', 'Trebuchet MS', 'Helvetica', 'Arial', 'Segoe UI', 'Roboto', 'Oxygen',
 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
 sans-serif;
 
-$console-font: 'Courier', 'Courier New', 'Consolas', 'Lucida Console', monospace;
+$console: 'Courier', 'Courier New', 'Consolas', 'Lucida Console', monospace;
