--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,13 +1,11 @@
+@use 'common/colours';
+@use 'common/fonts';
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  background: colours.$dark;
+  font-family: fonts.$main;
+  color: colours.$light;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
