--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -2,8 +2,11 @@
 @use 'common/fonts';
 
 body {
-  margin: 0;
+  display: flex;
+  justify-content: center;
+  margin: 5%;
   background: colours.$dark;
+  text-align: center;
   font-family: fonts.$main;
   color: colours.$light;
   -webkit-font-smoothing: antialiased;
