basic shop styling complete

--- a/client/src/styles/common/_fonts.scss
+++ b/client/src/styles/common/_fonts.scss
@@ -1,4 +1,4 @@
-$main: 'Optima', 'Trebuchet MS', 'Helvetica', 'Arial', 'Segoe UI', 'Roboto', 'Oxygen',
+$main: 'Trebuchet MS', 'Helvetica', 'Arial', 'Segoe UI', 'Roboto', 'Oxygen',
 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
 sans-serif;
 
