--- a/client/src/styles/StoryDisplay.scss
+++ b/client/src/styles/StoryDisplay.scss
@@ -1,30 +1,32 @@
 @use 'common/fonts';
+@use 'common/colours';
 
 #story-display {
+  position: relative;
   padding:25px;
   background-color: black;
   background-image: radial-gradient(
-    rgba(0, 150, 0, 0.75), black 120%
+    colours.$blue, black 120%
     );
     height: 300px;
   overflow: hidden;
 
     // MONITOR LINES
-    // &::after {
-    //   content: "";
-    //   position: absolute;
-    //   top: 0;
-    //   left: 0;
-    //   width: 100%;
-    //   height: 100%;
-    //   background: repeating-linear-gradient(
-    //     0deg,
-    //     rgba(black, 0.15),
-    //     rgba(black, 0.15) 1px,
-    //     transparent 1px,
-    //     transparent 2px
-    //     );
-    //   }
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: repeating-linear-gradient(
+        0deg,
+        rgba(black, 0.15),
+        rgba(black, 0.15) 1px,
+        transparent 1px,
+        transparent 2px
+        );
+      }
       
       p {
         margin: 0;
