--- a/client/src/styles/StoryDisplay.scss
+++ b/client/src/styles/StoryDisplay.scss
@@ -3,7 +3,9 @@
 
 #story-display {
   position: relative;
-  padding:25px;
+  margin: 0 20%;
+  border: 10px ridge colours.$light;
+  padding: 25px;
   background-color: black;
   background-image: radial-gradient(
     colours.$blue, black 120%
@@ -11,40 +13,40 @@
     height: 300px;
   overflow: hidden;
 
-    // MONITOR LINES
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: repeating-linear-gradient(
-        0deg,
-        rgba(black, 0.15),
-        rgba(black, 0.15) 1px,
-        transparent 1px,
-        transparent 2px
-        );
-      }
-      
-      p {
-        margin: 0;
-        overflow: hidden;
-        text-align: left;
-        vertical-align: bottom;
-        white-space: pre-wrap;
-        color: white;
-        text-shadow: 0 0 5px #C8C8C8;
-        font: 10pt fonts.$console;
-        //   border-right: .15em solid orange; /* The typwriter cursor */
-        //   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-        //   letter-spacing: .15em; /* Adjust as needed */
-        //   animation: 
-        //     typing 3.5s steps(40, end),
-        //   blink-caret .75s step-end infinite;
+  // MONITOR LINES
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: repeating-linear-gradient(
+      0deg,
+      rgba(black, 0.2),
+      rgba(black, 0.2) 1px,
+      transparent 1px,
+      transparent 2px
+    );
   }
 
+}
+
+#story-display-text {
+  margin: 0;
+  overflow: hidden;
+  text-align: left;
+  vertical-align: bottom;
+  white-space: pre-wrap;
+  color: white;
+  text-shadow: 0 0 5px #C8C8C8;
+  font: 10pt fonts.$console;
+  //   border-right: .15em solid orange; /* The typwriter cursor */
+  //   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  //   letter-spacing: .15em; /* Adjust as needed */
+  //   animation: 
+  //     typing 3.5s steps(40, end),
+  //   blink-caret .75s step-end infinite;
 }
 
 
