--- a/client/src/styles/StoryDisplay.scss
+++ b/client/src/styles/StoryDisplay.scss
@@ -1,16 +1,16 @@
 @use 'common/fonts';
 @use 'common/colours';
 
-#story-display {
+.story-display {
   position: relative;
-  margin: 0 20%;
+  width: 50vw;
+  margin: 0;
   border: 10px ridge colours.$light;
-  padding: 25px;
   background-color: black;
   background-image: radial-gradient(
     colours.$blue, black 120%
     );
-    height: 300px;
+    height: 50vh;
   overflow: hidden;
 
   // MONITOR LINES
@@ -32,8 +32,10 @@
 
 }
 
-#story-display-text {
-  margin: 0;
+.story-display-text {
+  position: absolute;
+  bottom: 0;
+  margin: 40px;
   overflow: hidden;
   text-align: left;
   vertical-align: bottom;
