--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -13,3 +13,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#game-container {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
