minor changes to story display

--- a/client/src/styles/StoryDisplay.scss
+++ b/client/src/styles/StoryDisplay.scss
@@ -42,7 +42,7 @@
   white-space: pre-wrap;
   color: white;
   text-shadow: 0 0 5px #C8C8C8;
-  font: 10pt fonts.$console;
+  font: 1.2rem fonts.$console;
   //   border-right: .15em solid orange; /* The typwriter cursor */
   //   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   //   letter-spacing: .15em; /* Adjust as needed */
