--- a/client/src/styles/ShopItem.scss
+++ b/client/src/styles/ShopItem.scss
@@ -18,7 +18,7 @@
   text-transform: uppercase;
   font-weight: bold;
   cursor: pointer;
-  transition: all .45s ease-Out;
+  transition: all .45s ease-out;
 
 
   &:hover {
