removed shop border and changed autoclicker balance for presentation

--- a/client/src/styles/Shop.scss
+++ b/client/src/styles/Shop.scss
@@ -3,7 +3,7 @@
 #shop {
   display: flex;
   margin-top: 25px;
-  border: colours.$light 2px solid;
+  // border: colours.$light 2px solid;
 
   .shop-column{
     flex: 1;
